--- a/roles/haproxy_config/files/haproxy.cfg.j2
+++ b/roles/haproxy_config/files/haproxy.cfg.j2
@@ -1,8 +1,5 @@
 # haproxy.cfg.j2
 
-{% set masters = groups['masters'] %}
-{% set workers = groups['workers'] %}
-
 global
   log         127.0.0.1 local2
   pidfile     /var/run/haproxy.pid
@@ -32,14 +29,14 @@ listen api-server-6443
   option log-health-checks
   balance roundrobin
 {% for master in masters %}
-  server master{{ loop.index }} {{ hostvars[master] }}:6443 weight 1 verify none check check-ssl inter 10s fall 2 rise 3
+  server master{{ loop.index }} {{ master }}:6443 weight 1 verify none check check-ssl inter 10s fall 2 rise 3
 {% endfor %}
 
 listen machine-config-server-22623
   bind *:22623
   mode tcp
 {% for master in masters %}
-  server master{{ loop.index }} {{ hostvars[master] }}:22623 check inter 1s
+  server master{{ loop.index }} {{ master }}:22623 check inter 1s
 {% endfor %}
 
 listen ingress-router-443
@@ -47,7 +44,7 @@ listen ingress-router-443
   mode tcp
   balance source
 {% for worker in workers %}
-  server worker{{ loop.index }} {{ hostvars[worker] }}:443 check inter 1s
+  server worker{{ loop.index }} {{ worker }}:443 check inter 1s
 {% endfor %}
 
 listen ingress-router-80
@@ -55,5 +52,5 @@ listen ingress-router-80
   mode tcp
   balance source
 {% for worker in workers %}
-  server worker{{ loop.index }} {{ hostvars[worker] }}:80 check inter 1s
+  server worker{{ loop.index }} {{ worker }}:80 check inter 1s
 {% endfor %}
